# GSM-Forwarder-IDF

./: CMakeLists.txt  LICENSE  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  cellular_conn.c  cellular_conn.h  http_test.c  http_test.h  idf_component.yml  main.c  modem_power.c  modem_power.h  wifi_conn.c  wifi_conn.h
